<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ravin.veto.HelpScreen"
    tools:showIn="@layout/activity_help_screen">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/part1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text_part1" />

        <LinearLayout
            android:id="@+id/forcer_wins"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_below="@id/part1"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/forcer_win_1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:paddingRight="4dp"
                android:src="@drawable/forcerwin1" />

            <ImageView
                android:id="@+id/forcer_win_2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:paddingLeft="4dp"
                android:src="@drawable/forcerwin2"/>
        </LinearLayout>

        <TextView
            android:id="@+id/part2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text_part2"
            android:layout_below="@id/forcer_wins" />

        <ImageView
            android:id="@+id/blocker_win"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/blockerwin"
            android:contentDescription="@string/blockerwin"
            android:layout_below="@id/part2"/>

        <TextView
            android:id="@+id/part3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text_part3"
            android:layout_below="@id/blocker_win"/>
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
