<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5656CF"
    tools:context=".Title">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="70sp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:background="@drawable/buttonshape"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/single_player"
                android:text="@string/single_player_text"
                android:textStyle="bold"
                android:textColor="#2E9DFF"
                android:textSize="24sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#1919AA"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="4"
                android:onClick="startGameSingle"/>

            <Button
                android:id="@+id/two_player"
                android:text="@string/two_player_text"
                android:textStyle="bold"
                android:textColor="#2E9DFF"
                android:textSize="24sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#1919AA"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="4"
                android:onClick="startGameDouble"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/controls">
            <Button
                android:id="@+id/how_to_play"
                android:text="@string/how_to_play"
                android:textStyle="bold"
                android:textColor="#2E9DFF"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:shadowColor="#1919AA"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="4"
                android:onClick="showHelp"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
