<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1414BC"
    tools:context="com.example.ravin.veto.Game">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="horizontal"
        android:id="@+id/fullscreen_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="5"
            android:layout_height="75dp"
            android:id="@+id/row1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b4"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b5"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="5"
            android:layout_height="75dp"
            android:id="@+id/row2"
            android:orientation="horizontal"
            android:layout_below="@id/row1">

            <Button
                android:id="@+id/b6"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b7"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b8"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b9"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b10"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="5"
            android:layout_height="75dp"
            android:id="@+id/row3"
            android:orientation="horizontal"
            android:layout_below="@id/row2">

            <Button
                android:id="@+id/b11"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b12"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b13"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b14"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b15"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="5"
            android:layout_height="75dp"
            android:id="@+id/row4"
            android:orientation="horizontal"
            android:layout_below="@id/row3">

            <Button
                android:id="@+id/b16"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b17"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b18"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b19"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b20"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="5"
            android:layout_height="75dp"
            android:id="@+id/row5"
            android:orientation="horizontal"
            android:layout_below="@id/row4">

            <Button
                android:id="@+id/b21"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b22"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b23"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b24"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/b25"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/row5"
            android:paddingTop="19dp"
            android:textSize="30sp"
            android:textColor="#478EC6"
            android:textStyle="bold"
            android:text="@string/message"
            android:layout_centerHorizontal="true"
            android:id="@+id/message"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetMessage"
            android:id="@+id/reset"
            android:onClick="resetPressed"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:id="@+id/help"
            android:onClick="showHelp"
            android:layout_alignTop="@+id/reset"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</FrameLayout>
